test-cases/negative/test_108_try_without_catch.lay
# negative test: try block without catch
# expected: parser should reject this or require catch

try
  throw 'error'
end try


